--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Blog-Angular": {
+    "blog-frame": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Blog-Angular",
+            "outputPath": "dist/blog-frame",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Blog-Angular:build"
+            "browserTarget": "blog-frame:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Blog-Angular:build:production"
+              "browserTarget": "blog-frame:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Blog-Angular:build"
+            "browserTarget": "blog-frame:build"
           }
         },
         "test": {
@@ -110,15 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Blog-Angular:serve"
+            "devServerTarget": "blog-frame:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Blog-Angular:serve:production"
+              "devServerTarget": "blog-frame:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "Blog-Angular"
+  "defaultProject": "blog-frame"
 }
