--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "@types/showdown": "^1.4.31",
+    "dompurify": "^2.0.15",
     "rxjs": "~6.6.0",
+    "showdown": "^1.9.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
