--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "@okta/okta-angular": "^2.2.0",
     "dompurify": "^2.0.15",
     "rxjs": "~6.6.0",
     "showdown": "^1.9.1",
