--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "@types/simplemde": "^1.11.6",
     "dompurify": "^2.0.15",
     "rxjs": "~6.6.0",
     "showdown": "^1.9.1",
+    "simplemde": "^1.11.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
