--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@okta/okta-angular": "^2.2.0",
     "@types/simplemde": "^1.11.6",
     "dompurify": "^2.0.15",
+    "moment": "^2.28.0",
     "rxjs": "~6.6.0",
     "showdown": "^1.9.1",
     "simplemde": "^1.11.2",
